--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "react": "^16.8.6",
